Adapter row fixing

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="blue">#1444F3</color>
     <color name="grey">#DFD9D9</color>
     <color name="grey2">#888585</color>
+    <color name="grey3">#FF888888</color>
     <color name="pink">#D1BCD5</color>
     <color name="white">#FFFFFFFF</color>
     <color name="light_green">#609E63</color>
