--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -58,7 +58,7 @@
             android:textOn=""
             android:textOff=""
             android:background="@drawable/star"
-            android:backgroundTint="@color/grey"
+            android:backgroundTint="@color/grey3"
             android:layout_marginTop="@dimen/dp_15"
             android:layout_marginEnd="@dimen/dp_15" />
 
